script/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> proc
Rule 1     proc -> proc com
Rule 2     proc -> com
Rule 3     com -> { proc }
Rule 4     com -> if
Rule 5     if -> IF ( expr ) com ELSE com
Rule 6     if -> IF ( expr ) com
Rule 7     com -> WHILE ( expr ) com
Rule 8     com -> UNTIL ( expr ) com
Rule 9     com -> FOR ( cexpr cexpr expr ) com
Rule 10    com -> DEFINE ID ( call ) com
Rule 11    com -> cexpr
Rule 12    com -> ;
Rule 13    cexpr -> expr ;
Rule 14    expr -> substitute
Rule 15    substitute -> substitute SET logical
Rule 16    substitute -> substitute AAS logical
Rule 17    substitute -> substitute SAS logical
Rule 18    substitute -> substitute MAS logical
Rule 19    substitute -> substitute DAS logical
Rule 20    substitute -> substitute RAS logical
Rule 21    substitute -> substitute SQS logical
Rule 22    substitute -> logical
Rule 23    logical -> logical & comparison
Rule 24    logical -> logical | comparison
Rule 25    logical -> ! comparison
Rule 26    logical -> comparison
Rule 27    comparison -> comparison EQU polynomial
Rule 28    comparison -> comparison BOE polynomial
Rule 29    comparison -> comparison SOE polynomial
Rule 30    comparison -> comparison NOE polynomial
Rule 31    comparison -> comparison BIG polynomial
Rule 32    comparison -> comparison SMA polynomial
Rule 33    comparison -> polynomial
Rule 34    polynomial -> polynomial + factor
Rule 35    polynomial -> polynomial - factor
Rule 36    polynomial -> factor
Rule 37    factor -> factor * element
Rule 38    factor -> factor / element
Rule 39    factor -> factor % element
Rule 40    factor -> element ^ factor
Rule 41    factor -> element
Rule 42    element -> BREAK
Rule 43    element -> CONTINUE
Rule 44    element -> - NUMBER
Rule 45    element -> NUMBER
Rule 46    element -> TRUE
Rule 47    element -> FALSE
Rule 48    element -> STRING
Rule 49    element -> ID ( call )
Rule 50    element -> ID
Rule 51    element -> { call }
Rule 52    element -> ID index
Rule 53    index -> index [ expr ]
Rule 54    index -> [ expr ]
Rule 55    element -> ( expr )
Rule 56    call -> call , expr
Rule 57    call -> expr
Rule 58    call -> <empty>

Terminals, with rules where they appear

!                    : 25
%                    : 39
&                    : 23
(                    : 5 6 7 8 9 10 49 55
)                    : 5 6 7 8 9 10 49 55
*                    : 37
+                    : 34
,                    : 56
-                    : 35 44
/                    : 38
;                    : 12 13
AAS                  : 16
BIG                  : 31
BOE                  : 28
BREAK                : 42
COMMENT              : 
CONTINUE             : 43
DAS                  : 19
DEFINE               : 10
ELSE                 : 5
EQU                  : 27
FALSE                : 47
FOR                  : 9
ID                   : 10 49 50 52
IF                   : 5 6
MAS                  : 18
NOE                  : 30
NUMBER               : 44 45
RAS                  : 20
SAS                  : 17
SET                  : 15
SMA                  : 32
SOE                  : 29
SQS                  : 21
STRING               : 48
TRUE                 : 46
UNTIL                : 8
WHILE                : 7
[                    : 53 54
]                    : 53 54
^                    : 40
error                : 
{                    : 3 51
|                    : 24
}                    : 3 51

Nonterminals, with rules where they appear

call                 : 10 49 51 56
cexpr                : 9 9 11
com                  : 1 2 5 5 6 7 8 9 10
comparison           : 23 24 25 26 27 28 29 30 31 32
element              : 37 38 39 40 41
expr                 : 5 6 7 8 9 13 53 54 55 56 57
factor               : 34 35 36 37 38 39 40
if                   : 4
index                : 52 53
logical              : 15 16 17 18 19 20 21 22 23 24
polynomial           : 27 28 29 30 31 32 33 34 35
proc                 : 1 3 0
substitute           : 14 15 16 17 18 19 20 21

Parsing method: LALR

state 0

    (0) S' -> . proc
    (1) proc -> . proc com
    (2) proc -> . com
    (3) com -> . { proc }
    (4) com -> . if
    (7) com -> . WHILE ( expr ) com
    (8) com -> . UNTIL ( expr ) com
    (9) com -> . FOR ( cexpr cexpr expr ) com
    (10) com -> . DEFINE ID ( call ) com
    (11) com -> . cexpr
    (12) com -> . ;
    (5) if -> . IF ( expr ) com ELSE com
    (6) if -> . IF ( expr ) com
    (13) cexpr -> . expr ;
    (14) expr -> . substitute
    (15) substitute -> . substitute SET logical
    (16) substitute -> . substitute AAS logical
    (17) substitute -> . substitute SAS logical
    (18) substitute -> . substitute MAS logical
    (19) substitute -> . substitute DAS logical
    (20) substitute -> . substitute RAS logical
    (21) substitute -> . substitute SQS logical
    (22) substitute -> . logical
    (23) logical -> . logical & comparison
    (24) logical -> . logical | comparison
    (25) logical -> . ! comparison
    (26) logical -> . comparison
    (27) comparison -> . comparison EQU polynomial
    (28) comparison -> . comparison BOE polynomial
    (29) comparison -> . comparison SOE polynomial
    (30) comparison -> . comparison NOE polynomial
    (31) comparison -> . comparison BIG polynomial
    (32) comparison -> . comparison SMA polynomial
    (33) comparison -> . polynomial
    (34) polynomial -> . polynomial + factor
    (35) polynomial -> . polynomial - factor
    (36) polynomial -> . factor
    (37) factor -> . factor * element
    (38) factor -> . factor / element
    (39) factor -> . factor % element
    (40) factor -> . element ^ factor
    (41) factor -> . element
    (42) element -> . BREAK
    (43) element -> . CONTINUE
    (44) element -> . - NUMBER
    (45) element -> . NUMBER
    (46) element -> . TRUE
    (47) element -> . FALSE
    (48) element -> . STRING
    (49) element -> . ID ( call )
    (50) element -> . ID
    (51) element -> . { call }
    (52) element -> . ID index
    (55) element -> . ( expr )

    {               shift and go to state 3
    WHILE           shift and go to state 5
    UNTIL           shift and go to state 8
    FOR             shift and go to state 9
    DEFINE          shift and go to state 11
    ;               shift and go to state 13
    IF              shift and go to state 14
    !               shift and go to state 18
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    -               shift and go to state 21
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 12
    (               shift and go to state 6

    proc                           shift and go to state 1
    com                            shift and go to state 2
    if                             shift and go to state 4
    expr                           shift and go to state 7
    cexpr                          shift and go to state 10
    substitute                     shift and go to state 15
    logical                        shift and go to state 16
    comparison                     shift and go to state 17
    polynomial                     shift and go to state 19
    factor                         shift and go to state 20
    element                        shift and go to state 22

state 1

    (0) S' -> proc .
    (1) proc -> proc . com
    (3) com -> . { proc }
    (4) com -> . if
    (7) com -> . WHILE ( expr ) com
    (8) com -> . UNTIL ( expr ) com
    (9) com -> . FOR ( cexpr cexpr expr ) com
    (10) com -> . DEFINE ID ( call ) com
    (11) com -> . cexpr
    (12) com -> . ;
    (5) if -> . IF ( expr ) com ELSE com
    (6) if -> . IF ( expr ) com
    (13) cexpr -> . expr ;
    (14) expr -> . substitute
    (15) substitute -> . substitute SET logical
    (16) substitute -> . substitute AAS logical
    (17) substitute -> . substitute SAS logical
    (18) substitute -> . substitute MAS logical
    (19) substitute -> . substitute DAS logical
    (20) substitute -> . substitute RAS logical
    (21) substitute -> . substitute SQS logical
    (22) substitute -> . logical
    (23) logical -> . logical & comparison
    (24) logical -> . logical | comparison
    (25) logical -> . ! comparison
    (26) logical -> . comparison
    (27) comparison -> . comparison EQU polynomial
    (28) comparison -> . comparison BOE polynomial
    (29) comparison -> . comparison SOE polynomial
    (30) comparison -> . comparison NOE polynomial
    (31) comparison -> . comparison BIG polynomial
    (32) comparison -> . comparison SMA polynomial
    (33) comparison -> . polynomial
    (34) polynomial -> . polynomial + factor
    (35) polynomial -> . polynomial - factor
    (36) polynomial -> . factor
    (37) factor -> . factor * element
    (38) factor -> . factor / element
    (39) factor -> . factor % element
    (40) factor -> . element ^ factor
    (41) factor -> . element
    (42) element -> . BREAK
    (43) element -> . CONTINUE
    (44) element -> . - NUMBER
    (45) element -> . NUMBER
    (46) element -> . TRUE
    (47) element -> . FALSE
    (48) element -> . STRING
    (49) element -> . ID ( call )
    (50) element -> . ID
    (51) element -> . { call }
    (52) element -> . ID index
    (55) element -> . ( expr )

    {               shift and go to state 3
    WHILE           shift and go to state 5
    UNTIL           shift and go to state 8
    FOR             shift and go to state 9
    DEFINE          shift and go to state 11
    ;               shift and go to state 13
    IF              shift and go to state 14
    !               shift and go to state 18
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    -               shift and go to state 21
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 12
    (               shift and go to state 6

    com                            shift and go to state 29
    if                             shift and go to state 4
    expr                           shift and go to state 7
    cexpr                          shift and go to state 10
    substitute                     shift and go to state 15
    logical                        shift and go to state 16
    comparison                     shift and go to state 17
    polynomial                     shift and go to state 19
    factor                         shift and go to state 20
    element                        shift and go to state 22

state 2

    (2) proc -> com .

    {               reduce using rule 2 (proc -> com .)
    WHILE           reduce using rule 2 (proc -> com .)
    UNTIL           reduce using rule 2 (proc -> com .)
    FOR             reduce using rule 2 (proc -> com .)
    DEFINE          reduce using rule 2 (proc -> com .)
    ;               reduce using rule 2 (proc -> com .)
    IF              reduce using rule 2 (proc -> com .)
    !               reduce using rule 2 (proc -> com .)
    BREAK           reduce using rule 2 (proc -> com .)
    CONTINUE        reduce using rule 2 (proc -> com .)
    -               reduce using rule 2 (proc -> com .)
    NUMBER          reduce using rule 2 (proc -> com .)
    TRUE            reduce using rule 2 (proc -> com .)
    FALSE           reduce using rule 2 (proc -> com .)
    STRING          reduce using rule 2 (proc -> com .)
    ID              reduce using rule 2 (proc -> com .)
    (               reduce using rule 2 (proc -> com .)
    $end            reduce using rule 2 (proc -> com .)
    }               reduce using rule 2 (proc -> com .)


state 3

    (3) com -> { . proc }
    (51) element -> { . call }
    (1) proc -> . proc com
    (2) proc -> . com
    (56) call -> . call , expr
    (57) call -> . expr
    (58) call -> .
    (3) com -> . { proc }
    (4) com -> . if
    (7) com -> . WHILE ( expr ) com
    (8) com -> . UNTIL ( expr ) com
    (9) com -> . FOR ( cexpr cexpr expr ) com
    (10) com -> . DEFINE ID ( call ) com
    (11) com -> . cexpr
    (12) com -> . ;
    (14) expr -> . substitute
    (5) if -> . IF ( expr ) com ELSE com
    (6) if -> . IF ( expr ) com
    (13) cexpr -> . expr ;
    (15) substitute -> . substitute SET logical
    (16) substitute -> . substitute AAS logical
    (17) substitute -> . substitute SAS logical
    (18) substitute -> . substitute MAS logical
    (19) substitute -> . substitute DAS logical
    (20) substitute -> . substitute RAS logical
    (21) substitute -> . substitute SQS logical
    (22) substitute -> . logical
    (23) logical -> . logical & comparison
    (24) logical -> . logical | comparison
    (25) logical -> . ! comparison
    (26) logical -> . comparison
    (27) comparison -> . comparison EQU polynomial
    (28) comparison -> . comparison BOE polynomial
    (29) comparison -> . comparison SOE polynomial
    (30) comparison -> . comparison NOE polynomial
    (31) comparison -> . comparison BIG polynomial
    (32) comparison -> . comparison SMA polynomial
    (33) comparison -> . polynomial
    (34) polynomial -> . polynomial + factor
    (35) polynomial -> . polynomial - factor
    (36) polynomial -> . factor
    (37) factor -> . factor * element
    (38) factor -> . factor / element
    (39) factor -> . factor % element
    (40) factor -> . element ^ factor
    (41) factor -> . element
    (42) element -> . BREAK
    (43) element -> . CONTINUE
    (44) element -> . - NUMBER
    (45) element -> . NUMBER
    (46) element -> . TRUE
    (47) element -> . FALSE
    (48) element -> . STRING
    (49) element -> . ID ( call )
    (50) element -> . ID
    (51) element -> . { call }
    (52) element -> . ID index
    (55) element -> . ( expr )

    }               reduce using rule 58 (call -> .)
    ,               reduce using rule 58 (call -> .)
    {               shift and go to state 3
    WHILE           shift and go to state 5
    UNTIL           shift and go to state 8
    FOR             shift and go to state 9
    DEFINE          shift and go to state 11
    ;               shift and go to state 13
    IF              shift and go to state 14
    !               shift and go to state 18
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    -               shift and go to state 21
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 12
    (               shift and go to state 6

    proc                           shift and go to state 30
    call                           shift and go to state 31
    com                            shift and go to state 2
    expr                           shift and go to state 32
    if                             shift and go to state 4
    cexpr                          shift and go to state 10
    substitute                     shift and go to state 15
    logical                        shift and go to state 16
    comparison                     shift and go to state 17
    polynomial                     shift and go to state 19
    factor                         shift and go to state 20
    element                        shift and go to state 22

state 4

    (4) com -> if .

    {               reduce using rule 4 (com -> if .)
    WHILE           reduce using rule 4 (com -> if .)
    UNTIL           reduce using rule 4 (com -> if .)
    FOR             reduce using rule 4 (com -> if .)
    DEFINE          reduce using rule 4 (com -> if .)
    ;               reduce using rule 4 (com -> if .)
    IF              reduce using rule 4 (com -> if .)
    !               reduce using rule 4 (com -> if .)
    BREAK           reduce using rule 4 (com -> if .)
    CONTINUE        reduce using rule 4 (com -> if .)
    -               reduce using rule 4 (com -> if .)
    NUMBER          reduce using rule 4 (com -> if .)
    TRUE            reduce using rule 4 (com -> if .)
    FALSE           reduce using rule 4 (com -> if .)
    STRING          reduce using rule 4 (com -> if .)
    ID              reduce using rule 4 (com -> if .)
    (               reduce using rule 4 (com -> if .)
    $end            reduce using rule 4 (com -> if .)
    }               reduce using rule 4 (com -> if .)
    ELSE            reduce using rule 4 (com -> if .)


state 5

    (7) com -> WHILE . ( expr ) com

    (               shift and go to state 33


state 6

    (55) element -> ( . expr )
    (14) expr -> . substitute
    (15) substitute -> . substitute SET logical
    (16) substitute -> . substitute AAS logical
    (17) substitute -> . substitute SAS logical
    (18) substitute -> . substitute MAS logical
    (19) substitute -> . substitute DAS logical
    (20) substitute -> . substitute RAS logical
    (21) substitute -> . substitute SQS logical
    (22) substitute -> . logical
    (23) logical -> . logical & comparison
    (24) logical -> . logical | comparison
    (25) logical -> . ! comparison
    (26) logical -> . comparison
    (27) comparison -> . comparison EQU polynomial
    (28) comparison -> . comparison BOE polynomial
    (29) comparison -> . comparison SOE polynomial
    (30) comparison -> . comparison NOE polynomial
    (31) comparison -> . comparison BIG polynomial
    (32) comparison -> . comparison SMA polynomial
    (33) comparison -> . polynomial
    (34) polynomial -> . polynomial + factor
    (35) polynomial -> . polynomial - factor
    (36) polynomial -> . factor
    (37) factor -> . factor * element
    (38) factor -> . factor / element
    (39) factor -> . factor % element
    (40) factor -> . element ^ factor
    (41) factor -> . element
    (42) element -> . BREAK
    (43) element -> . CONTINUE
    (44) element -> . - NUMBER
    (45) element -> . NUMBER
    (46) element -> . TRUE
    (47) element -> . FALSE
    (48) element -> . STRING
    (49) element -> . ID ( call )
    (50) element -> . ID
    (51) element -> . { call }
    (52) element -> . ID index
    (55) element -> . ( expr )

    !               shift and go to state 18
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    -               shift and go to state 21
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 12
    {               shift and go to state 35
    (               shift and go to state 6

    expr                           shift and go to state 34
    substitute                     shift and go to state 15
    logical                        shift and go to state 16
    comparison                     shift and go to state 17
    polynomial                     shift and go to state 19
    factor                         shift and go to state 20
    element                        shift and go to state 22

state 7

    (13) cexpr -> expr . ;

    ;               shift and go to state 36


state 8

    (8) com -> UNTIL . ( expr ) com

    (               shift and go to state 37


state 9

    (9) com -> FOR . ( cexpr cexpr expr ) com

    (               shift and go to state 38


state 10

    (11) com -> cexpr .

    {               reduce using rule 11 (com -> cexpr .)
    WHILE           reduce using rule 11 (com -> cexpr .)
    UNTIL           reduce using rule 11 (com -> cexpr .)
    FOR             reduce using rule 11 (com -> cexpr .)
    DEFINE          reduce using rule 11 (com -> cexpr .)
    ;               reduce using rule 11 (com -> cexpr .)
    IF              reduce using rule 11 (com -> cexpr .)
    !               reduce using rule 11 (com -> cexpr .)
    BREAK           reduce using rule 11 (com -> cexpr .)
    CONTINUE        reduce using rule 11 (com -> cexpr .)
    -               reduce using rule 11 (com -> cexpr .)
    NUMBER          reduce using rule 11 (com -> cexpr .)
    TRUE            reduce using rule 11 (com -> cexpr .)
    FALSE           reduce using rule 11 (com -> cexpr .)
    STRING          reduce using rule 11 (com -> cexpr .)
    ID              reduce using rule 11 (com -> cexpr .)
    (               reduce using rule 11 (com -> cexpr .)
    $end            reduce using rule 11 (com -> cexpr .)
    }               reduce using rule 11 (com -> cexpr .)
    ELSE            reduce using rule 11 (com -> cexpr .)


state 11

    (10) com -> DEFINE . ID ( call ) com

    ID              shift and go to state 39


state 12

    (49) element -> ID . ( call )
    (50) element -> ID .
    (52) element -> ID . index
    (53) index -> . index [ expr ]
    (54) index -> . [ expr ]

    (               shift and go to state 40
    ^               reduce using rule 50 (element -> ID .)
    *               reduce using rule 50 (element -> ID .)
    /               reduce using rule 50 (element -> ID .)
    %               reduce using rule 50 (element -> ID .)
    +               reduce using rule 50 (element -> ID .)
    -               reduce using rule 50 (element -> ID .)
    EQU             reduce using rule 50 (element -> ID .)
    BOE             reduce using rule 50 (element -> ID .)
    SOE             reduce using rule 50 (element -> ID .)
    NOE             reduce using rule 50 (element -> ID .)
    BIG             reduce using rule 50 (element -> ID .)
    SMA             reduce using rule 50 (element -> ID .)
    &               reduce using rule 50 (element -> ID .)
    |               reduce using rule 50 (element -> ID .)
    SET             reduce using rule 50 (element -> ID .)
    AAS             reduce using rule 50 (element -> ID .)
    SAS             reduce using rule 50 (element -> ID .)
    MAS             reduce using rule 50 (element -> ID .)
    DAS             reduce using rule 50 (element -> ID .)
    RAS             reduce using rule 50 (element -> ID .)
    SQS             reduce using rule 50 (element -> ID .)
    ;               reduce using rule 50 (element -> ID .)
    }               reduce using rule 50 (element -> ID .)
    ,               reduce using rule 50 (element -> ID .)
    )               reduce using rule 50 (element -> ID .)
    ]               reduce using rule 50 (element -> ID .)
    [               shift and go to state 42

    index                          shift and go to state 41

state 13

    (12) com -> ; .

    {               reduce using rule 12 (com -> ; .)
    WHILE           reduce using rule 12 (com -> ; .)
    UNTIL           reduce using rule 12 (com -> ; .)
    FOR             reduce using rule 12 (com -> ; .)
    DEFINE          reduce using rule 12 (com -> ; .)
    ;               reduce using rule 12 (com -> ; .)
    IF              reduce using rule 12 (com -> ; .)
    !               reduce using rule 12 (com -> ; .)
    BREAK           reduce using rule 12 (com -> ; .)
    CONTINUE        reduce using rule 12 (com -> ; .)
    -               reduce using rule 12 (com -> ; .)
    NUMBER          reduce using rule 12 (com -> ; .)
    TRUE            reduce using rule 12 (com -> ; .)
    FALSE           reduce using rule 12 (com -> ; .)
    STRING          reduce using rule 12 (com -> ; .)
    ID              reduce using rule 12 (com -> ; .)
    (               reduce using rule 12 (com -> ; .)
    $end            reduce using rule 12 (com -> ; .)
    }               reduce using rule 12 (com -> ; .)
    ELSE            reduce using rule 12 (com -> ; .)


state 14

    (5) if -> IF . ( expr ) com ELSE com
    (6) if -> IF . ( expr ) com

    (               shift and go to state 43


state 15

    (14) expr -> substitute .
    (15) substitute -> substitute . SET logical
    (16) substitute -> substitute . AAS logical
    (17) substitute -> substitute . SAS logical
    (18) substitute -> substitute . MAS logical
    (19) substitute -> substitute . DAS logical
    (20) substitute -> substitute . RAS logical
    (21) substitute -> substitute . SQS logical

    ;               reduce using rule 14 (expr -> substitute .)
    }               reduce using rule 14 (expr -> substitute .)
    ,               reduce using rule 14 (expr -> substitute .)
    )               reduce using rule 14 (expr -> substitute .)
    ]               reduce using rule 14 (expr -> substitute .)
    SET             shift and go to state 44
    AAS             shift and go to state 45
    SAS             shift and go to state 46
    MAS             shift and go to state 47
    DAS             shift and go to state 48
    RAS             shift and go to state 49
    SQS             shift and go to state 50


state 16

    (22) substitute -> logical .
    (23) logical -> logical . & comparison
    (24) logical -> logical . | comparison

    SET             reduce using rule 22 (substitute -> logical .)
    AAS             reduce using rule 22 (substitute -> logical .)
    SAS             reduce using rule 22 (substitute -> logical .)
    MAS             reduce using rule 22 (substitute -> logical .)
    DAS             reduce using rule 22 (substitute -> logical .)
    RAS             reduce using rule 22 (substitute -> logical .)
    SQS             reduce using rule 22 (substitute -> logical .)
    ;               reduce using rule 22 (substitute -> logical .)
    }               reduce using rule 22 (substitute -> logical .)
    ,               reduce using rule 22 (substitute -> logical .)
    )               reduce using rule 22 (substitute -> logical .)
    ]               reduce using rule 22 (substitute -> logical .)
    &               shift and go to state 51
    |               shift and go to state 52


state 17

    (26) logical -> comparison .
    (27) comparison -> comparison . EQU polynomial
    (28) comparison -> comparison . BOE polynomial
    (29) comparison -> comparison . SOE polynomial
    (30) comparison -> comparison . NOE polynomial
    (31) comparison -> comparison . BIG polynomial
    (32) comparison -> comparison . SMA polynomial

    &               reduce using rule 26 (logical -> comparison .)
    |               reduce using rule 26 (logical -> comparison .)
    SET             reduce using rule 26 (logical -> comparison .)
    AAS             reduce using rule 26 (logical -> comparison .)
    SAS             reduce using rule 26 (logical -> comparison .)
    MAS             reduce using rule 26 (logical -> comparison .)
    DAS             reduce using rule 26 (logical -> comparison .)
    RAS             reduce using rule 26 (logical -> comparison .)
    SQS             reduce using rule 26 (logical -> comparison .)
    ;               reduce using rule 26 (logical -> comparison .)
    }               reduce using rule 26 (logical -> comparison .)
    ,               reduce using rule 26 (logical -> comparison .)
    )               reduce using rule 26 (logical -> comparison .)
    ]               reduce using rule 26 (logical -> comparison .)
    EQU             shift and go to state 53
    BOE             shift and go to state 54
    SOE             shift and go to state 55
    NOE             shift and go to state 56
    BIG             shift and go to state 57
    SMA             shift and go to state 58


state 18

    (25) logical -> ! . comparison
    (27) comparison -> . comparison EQU polynomial
    (28) comparison -> . comparison BOE polynomial
    (29) comparison -> . comparison SOE polynomial
    (30) comparison -> . comparison NOE polynomial
    (31) comparison -> . comparison BIG polynomial
    (32) comparison -> . comparison SMA polynomial
    (33) comparison -> . polynomial
    (34) polynomial -> . polynomial + factor
    (35) polynomial -> . polynomial - factor
    (36) polynomial -> . factor
    (37) factor -> . factor * element
    (38) factor -> . factor / element
    (39) factor -> . factor % element
    (40) factor -> . element ^ factor
    (41) factor -> . element
    (42) element -> . BREAK
    (43) element -> . CONTINUE
    (44) element -> . - NUMBER
    (45) element -> . NUMBER
    (46) element -> . TRUE
    (47) element -> . FALSE
    (48) element -> . STRING
    (49) element -> . ID ( call )
    (50) element -> . ID
    (51) element -> . { call }
    (52) element -> . ID index
    (55) element -> . ( expr )
